<resources>
    <string name="app_name">IFTransparenciaV2</string>
    <string name="data"></string>

    <array name="fases">
        <item name="empenho">Empenho</item>
        <item name="liquidação">Liquidação</item>
        <item name="pagamento">Pagamento</item>
    </array>

    <array name="institutions">
        <item name="iftm_upt">IFTM. C. UPT</item>
        <item name="iftm_uberaba">IFTM. C. Uberaba</item>
        <item name="uftm">UFTM</item>
    </array>

    <string name="cadastro_cliente">Cadastro de clientes</string>
    <string name="exibir_clientes">Clientes</string>
    <string name="edicao_cliente">Edição de clientes</string>
    <string name="name">Nome:</string>
    <string name="email">E-Mail:</string>
    <string name="telefone">Telefone:</string>
    <string name="cpf">CPF:</string>
    <string name="instituicao">Instituição:</string>
    <string name="cadastrar">Realizar Cadastro</string>
    <string name="password">Senha:</string>
    <string name="OK">OK!</string>
    <string name="request_client_id">1012033834245-ert5hba22sn9iva7kel6n63srn4q6hfc.apps.googleusercontent.com</string>

    //Menu

    <string name="menu_title_scholl">Auxílios Faculdade</string>
    <string name="menu_title_personal">Auxílios Pessoal</string>
    <string name="menu_title_all">Auxílios Geral</string>
    <string name="menu_title_profile">Meu Perfil</string>



</resources>
