<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="iftm.filipe.com.iftransparenciav2.ui.viewmodel.RegisterViewModel"/>
    </data>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical"
                tools:context=".MediaActivity">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:inputType="text"
                    android:hint="Digite seu nome"
                    android:text="@={viewModel.registerModel.name}"/>

                <TextView
                    android:id="@+id/tv_cpf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cpf" />

                <EditText
                    android:id="@+id/et_cpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:inputType="number"
                    android:hint="123.456.789-01"
                    android:text="@={viewModel.registerModel.cpf}"/>

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:inputType="textEmailAddress"
                    android:hint="example@example.com"
                    android:text="@={viewModel.registerModel.email}"/>

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:inputType="textPassword"
                    android:hint="**********"
                    android:text="@={viewModel.registerModel.password}"/>

                <TextView
                    android:id="@+id/tv_institution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/instituicao" />

                <Spinner
                    android:id="@+id/sp_institution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:inputType="text"
                    android:entries="@array/institutions"
                    android:onItemSelected="@{(parent,view,pos,id)->viewModel.onSelectItem(parent,view,pos,id)}"/>


                <Button
                    android:id="@+id/bt_salvar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cadastrar"
                    android:onClick="@{() -> viewModel.register()}"
                    android:textSize="15sp" />

            </LinearLayout>

        </ScrollView>

</layout>